# talos_robot-release

./: README.md  debian.store  lunar.ignored  melodic.ignored  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
talos_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_bringup/config/: talos_common_hardware.yaml  talos_motions.yaml
talos_bringup/config/twist_mux/: joystick.yaml  twist_mux_locks.yaml
talos_bringup/launch/: joystick_teleop.launch.py  talos_play_motion2.launch.py  talos_preload_libraries.launch.py  twist_mux.launch.py
talos_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_controller_configuration/config/: ankle_left_ft_broadcaster.yaml  configuration_initializer.yaml  current_limit_controllers.yaml  default_safety_parameters.yaml  estimation_controller_ariles.yaml  estimation_controller_ros.yaml  imu_sensor_broadcaster.yaml  init_offset_controller.yaml  plotjuggler_sensors.xml  walk_poses.yaml  walking_controller.yaml  walking_params.yaml  walking_specific_params.yaml  wrist_left_ft_broadcaster.yaml
talos_controller_configuration/config/joint_trajectory_controllers/: arm_right_controller.yaml  gripper_left_controller.yaml  gripper_right_controller.yaml  head_controller.yaml  leg_right_controller.yaml
talos_controller_configuration/config/local_joint_control/actuator_parameters/: arm_left_2_joint.yaml  arm_left_2_joint_safety.yaml  arm_left_3_joint.yaml  arm_left_4_joint.yaml  arm_right_1_joint.yaml  arm_right_2_joint.yaml  arm_right_2_joint_safety.yaml  arm_right_3_joint.yaml  arm_right_4_joint.yaml  arm_right_5_joint.yaml  head_1_joint.yaml  head_2_joint.yaml  leg_left_1_joint.yaml  leg_left_2_joint_safety.yaml  leg_left_4_joint.yaml  leg_right_1_joint.yaml  (+2 more)
talos_controller_configuration/launch/: bringup_controllers.launch.py  bringup_controllers_hardware.launch.py  current_limit_controllers.launch.py  default_controllers.launch.py  estimation_controller.launch.py
talos_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_description/config/: default_configuration_hanging.yaml  default_configuration_locomotion.yaml  gazebo_controller_manager_cfg.yaml  rviz.rviz
talos_description/gazebo/: gazebo.urdf.xacro
talos_description/launch/: robot_state_publisher.launch.py
talos_description/robots/: talos_arm_right.urdf.xacro  talos_full_no_grippers.urdf.xacro  talos_full_v2.urdf.xacro  talos_lower_body.urdf.xacro  talos_lower_body_torso_head.urdf.xacro
talos_description/urdf/: materials.urdf.xacro  talos_full_common.urdf.xacro
talos_description/urdf/arm/: arm.ros2_control.xacro  arm.transmission.xacro  arm.urdf.xacro  wrist.ros2_control.xacro  wrist.transmission.xacro  wrist.urdf.xacro
talos_description/urdf/gripper/: gripper.gazebo.xacro  gripper.ros2_control.xacro  gripper.transmission.xacro  gripper.urdf.xacro
talos_description/urdf/head/: head.transmission.xacro
talos_description/urdf/leg/: leg.ros2_control.xacro  leg.transmission.xacro  leg.urdf.xacro
talos_description/urdf/sensors/: ftsensor.ros2_control.xacro  imu.ros2_control.xacro
talos_description/urdf/torso/: torso.transmission.xacro  torso.urdf.xacro
(+99 files in other folders)
