<?xml version="1.0"?>
<package format="3">
  <name>talos_controller_configuration</name>
  <version>2.0.1</version>
  <description>The talos_controller_configuration package</description>

  <maintainer email="adria.roig@pal-robotics.com">Adria Roig</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>force_torque_sensor_broadcaster</exec_depend> 
  <!-- <exec_depend>walking_controller</exec_depend>  -->
  <!-- <exec_depend>walking_utils</exec_depend>  -->
  <!-- <exec_depend>current_limit_controller</exec_depend>  -->
 
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
